--- a/src/signup.html
+++ b/src/signup.html
@@ -16,5 +16,8 @@
                 <tr><td align="center"><button>Register</button></td></tr>
             </table>
         </form>
+        <center>
+            <br><a href="signin.html">I already have an account</a>
+        </center>
     </body>
 </html>
